# get-your-laundry-uwu

./: Cargo.toml  README.md
public/: LaundryElement.js  index.html
src/: machines.rs  main.rs
