[package]
name = "get-your-laundry-uwu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
itertools = "0.12.0"
lettre = { version = "0.11.2", features = [
    "builder",
    "smtp-transport",
], default-features = false }
serde = { version = "1.0.193", features = ["serde_derive", "rc"] }
serde_arrays = "0.1.0"
serde_json = "1.0.108"
serde_millis = "0.1.1"
serialport = { version = "4.3.0", default-features = false }
tokio = { version = "1.35.0", features = [
    "macros",
    "io-std",
] }
tokio-serial = "5.4.4"
tower-http = { version = "0.5.0", features = ["fs"] }
